# PythonFastApi

./: .gitignore  README.md  app.py  app_dict.py  main.py  mainList.py
data/: data.json
part1/: .app.py.swp  app.py  main.py  mainList.py
part2/: main.py
part3/: main.py  pyproject.toml  schema.py  utils.py
part3/routers/: providers.py
part3/static/: style.css
part3/templates/: add.html  base.html  delete.html  getAll.html  getProvider.html  search.html  update.html  updateform.html
