[tool.poetry]
name = "HealthcareProviderApi"
version = "0.1.0"
description = "RESTapi for healthcare providers using FastApi"
authors = ["rinkesh2131998 <rinkesh2131998@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.66.0"
pydantic = "^1.8.2"
uvicorn = "^0.14.0"
Jinja2 = "^3.0.1"
aiofiles = "^0.7.0"
python-multipart = "^0.0.5"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
